--- a/locales/hi/messages.json
+++ b/locales/hi/messages.json
@@ -1,4 +1,10 @@
 {
+    "assistant_extended_settings": {
+        "message": "उन्नत सेटिंग"
+    },
+    "assistant_block": {
+        "message": "अवरुद्ध"
+    },
     "settings_icon_size": {
         "message": "आइकन का आकार:"
     },
