--- a/locales/tr/messages.meta.json
+++ b/locales/tr/messages.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "AdGuard Asistanı",
-            "description": "Filtrelemeyi, tarayıcıdan doğrudan kolayca yönetmenizi sağlar."
+            "description": "Filtrelemeyi doğrudan tarayıcıdan yönetmenin kolay ve kullanışlı bir yolunu sağlar"
         }
     }
 }
