AG-15867 pull locales

--- a/locales/fi/messages.meta.json
+++ b/locales/fi/messages.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "AdGuard Avustaja",
-            "description": "Voit muutta hiljattain käyttämiesi sovellusten ja verkkosivujen suodatusasetuksia kätevästi suoraan selaimesta"
+            "description": "Voit muutta hiljattain käyttämiesi sovellusten ja verkkosivujen suodatusasetuksia kätevästi suoraan selaimesta."
         }
     }
 }
