--- a/locales/hi/messages.meta.json
+++ b/locales/hi/messages.meta.json
@@ -1,7 +1,7 @@
 {
     "extension": {
         "assistant": {
-            "name": "",
+            "name": "AdGuard सहायक",
             "description": ""
         }
     }
